resources/BLKmain.css
/*

BLK Theme for BetterDiscord. Created by https://github.com/fluentbyte.
GitHub Repository: https://github.com/fluentbyte/BLKdiscord
v1.0

*/

:root {
    --main-bg-color: #131313; /* Dark Grey */
    --second-bg-color: #000000; /* Black */
    --white-bg-color: #ffffff; /* White */
    --accent-color: #ff0046; /* Pink */
    --black-text-color: #000000; /* Black */
    --white-text-color: #ffffff; /* White */
    --spotify-color: #45d622; /* Spotify Color */
    --yellow-idle: #ffd100; /* Yellow Color for Idle Status */
    --main-text-color: #ffffff; /* White */
    --second-text-color: #000000; /* Black */
}

/* ------------------------------------------------------------------------- */

/* Background Colors */

  /* MAIN BACKGROUND COLOR */
  .messagesWrapper-3lZDfY,
  .guildsWrapper-5TJh6A,
  .inner-zqa7da,
  .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-track-piece,
  .wrapper-2NJDcI,
  .contentConnectedVoice-qL-YrL:active, .contentHoveredText-2D9B-x, .contentHoveredVoice-3p_NEO:active, .contentSelectedVoice-1WDIBM:active,
  .member-3W1lQa.popout-open .content-OzHfo4, .member-3W1lQa.popout-open:hover .content-OzHfo4,
  .search .search-bar,
  .body-3iLsc4, .footer-1fjuF6,
  .topSectionNormal-2-vo2m {
    background-color: var(--main-bg-color) !important;
  }

  /* SECOND BACKGROUND COLOR */
  .appMount-3VJmYg,
  .channels-Ie2l6A,
  .container-PNkimc,
  .title-3qD0b-,
  .chat-3bRxxu, .chat-3bRxxu form, .content-yTz4x3,
  .members-1998pB,
  .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-thumb,
  .container-1UB9sr,
  .typing-2GQL18,
  .wrapper-35wsBm,
  .container-2x5lvQ header,
  .container-2x5lvQ section,
  .headerNormal-T_seeN,
  .quickMessage-1yeL4E,
  .container-2lgZY8,
  .body-3ND3kc,
  .invisible-1kp8Z0, .offline-3qoTek, .unknown-Ms2zdV {
    background-color: var(--second-bg-color) !important;
  }

  /* ACCENT COLOR */
  .unread-1xRYoj,
  .dnd-1_xrcq,
  .headerPlaying-j0WQBV,
  .topSectionPlaying-1J5E4n,
  .guildInner-3DSoA4 .da-guildInner {
    background-color: var(--accent-color) !important;
  }

  /* WHITE */
  .menu-Sp6bN1,
  .guild-1EfMGQ.unread-qLkInr:before {
    background-color: var(--white-bg-color) !important;
  }

  /* YELLOW */
  .idle-3DEnRT {
    background-color: var(--yellow-idle) !important;
  }

  /* GREEN */
  .headerSpotify-zpWxgT,
  .lookFilled-1Gx00P.colorGreen-29iAKY,
  .online-2S838R {
    background-color: var(--spotify-color) !important;
  }

/* TEXT COLORS */

  /* BLACK */
  .item-1GzJrl,
  .lookInverted-2D7oAl.colorBrand-3pXr91,
  .alt-3btY0e .helper-2c73HK {
    color: var(--black-text-color) !important;
  }

  /* WHITE */
  .wrapper-2NJDcI {
    color: var(--white-text-color) !important;
  }

/* Individual changes */

.innerNoAutocomplete-1WpcVO,
.menu-Sp6bN1,
.wrapper-35wsBm,
.button-38aScr,
.member-3W1lQa,
.search .search-bar,
.userPopout-3XzG_A,
.quickMessage-2XpSaN,
.content-20Aix8,
.guild-1EfMGQ.selected-ML3OIq:before,
.connectedAccount-36nQx7,
.root-SR8cQa {
  border-radius: 12px;
}

.container-2Thooq, .theme-light .container-2Thooq {
  background: none;
}

.contentSelectedText-3wUhMi, .contentSelectedVoice-1WDIBM {
  background-color: #4f545c99;
}

.messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-track-piece,
.messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-thumb {
  border-color: var(--main-bg-color);
}

.container-1UB9sr {
  border-bottom: 1px solid var(--main-bg-color);
}

.item-1GzJrl:hover {
  background: linear-gradient(90deg,rgb(220, 220, 220) 70%,#ffffff) !important;
}

.member-3W1lQa:hover .content-OzHfo4 {
  background: linear-gradient(90deg,var(--main-bg-color) 70%,var(--second-bg-color)) !important;
}

.wrapper-35wsBm {
  border-color: var(--accent-color) !important;
}

.isMentioned-N-h9aa, .isMentionedCozy-3isp7y:after {
  background-color: #ff004614 !important;
}

.isMentionedCozy-3isp7y:after {
    border-left: 4px solid var(--accent-color);
}

.avatarSpeaking-1wJCNq {
  box-shadow: 0 0 0 2px var(--accent-color), inset 0 0 0 1.5px #000000
}

.popout-3sVMXz header {
  border-radius: 12px 12px 0 0;
}

.container-2x5lvQ section {
  border-radius: 0 0 12px 12px;
}

.quickMessage-1yeL4E,
.status-2s6iDp {
  border-color: var(--second-bg-color) !important;
}

.userPopout-3XzG_A {
  box-shadow: 0 2px 10px 0 rgb(0, 0, 0), 0 0 0 1px rgb(0, 0, 0) !important;
}

.guild-1EfMGQ.selected-ML3OIq:before {
  height: 30px;
  margin-top: -15px;
}

.connectedAccount-36nQx7, .userInfoSection-2acyCx+.userInfoSection-2acyCx {
  border-color: var(--main-bg-color) !important;
}

